xraylib/Acq.h

/** 
* AcquisitionDesc defines a data structure that is 
* used by all functions of XISL. It contains all 
* required parameters for the acquisition.
* Access to the data fields is only possible via 
* the XISL API functions. HACQDESC defines a HANLDE to the acquisition descriptor.
* @see AcquisitionDesc
* @ingroup enum
**/
typedef HANDLE HACQDESC;
    #define HIS_RETURN _DLL_API UINT WINAPI
typedef struct
{	
	GBIF_STRING_DATATYPE	ucMacAddress[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];			// unsigned since the adress components can be higher than 128
	GBIF_STRING_DATATYPE	ucIP[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucSubnetMask[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucGateway[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucAdapterIP[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];
	GBIF_STRING_DATATYPE	ucAdapterMask[GBIF_IP_MAC_NAME_CHAR_ARRAY_LENGTH];

	DWORD					dwIPCurrentBootOptions;
	CHAR 					cManufacturerName[32];										// PerkinElmer
	CHAR					cModelName[32];												// GBIF
	CHAR					cGBIFFirmwareVersion[32];
	CHAR					cDeviceName[16];

} GBIF_DEVICE_PARAM;
// 128Byte in total
typedef struct
{	
	char	cDetectorType[32];															// e.g. XRD 0822 AO 14
	char	cManufacturingDate[8];														// e.g. 201012
	char	cPlaceOfManufacture[8];														// e.g. DE
    char    cUniqueDeviceIdentifier[16];
    char    cDeviceIdentifier[16];
	char	cDummy[48];
} GBIF_Detector_Properties;
/** Possible system control actions for XRpad 
* @ingroup enum
*/
typedef enum {
	XRpad_SYSTEM_CONTROL_REBOOT = 0,           // restart XRpad 
	XRpad_SYSTEM_CONTROL_RESTART_NETWORK = 1,  // restart XRpad Network 
	XRpad_SYSTEM_CONTROL_SHUTDOWN = 2,         // shutdown XRpad
	XRpad_SYSTEM_CONTROL_SET_DEEP_SLEEP = 3,   // power down analog circuitry and sensor FPGA
	XRpad_SYSTEM_CONTROL_SET_IDLE = 4          // power up analog circuitry and sensor FPGA
} XRpad_SystemControlEnum;
/** Possible image transfer channels for XRpad
* @ingroup enum
*/
typedef enum XRpad_DataInterfaceControlEnum{
    XRpad_DATA_VIA_LAN = 0,             // use LAN
    XRpad_DATA_VIA_WLAN = 1             // use WLAN
} XRpad_DataInterfaceControlEnum;
/**
* @ingroup enum
*/
typedef void *XislFtpSession;
/**
* @ingroup enum
*/
typedef void *XislFileHandle;
/**
* @ingroup enum
*/
typedef enum XislFileEntryType
{
    XFT_File = 1,
    XFT_Directory = 2,
    XFT_Link = 4,
    // ...
    XFT_Other = 0x80000000,
    XFT_Any = 0xFFFFFFFF
} XislFileEntryType;
typedef struct XislFileInfo
{
    const char *filename;
    const char *directory;
    const char *address;
    size_t filesize;
    XislFileEntryType type;
    const char *timestamp;
    // XislFileStorageLocation location;
} XislFileInfo;
/**
* @ingroup enum
*/
typedef enum ProcScriptOperation
{
	PREBINNING,
	PREMEAN,
	PRESTOREBUFFER,
	OFFSET,
	GAIN,
	MEAN,
	PREVIEW,
	BINNING,
	STOREBUFFER,
	STORESD,
	SEND
} ProcScriptOperation;
/**
 * The device info
 *
 */
struct deviceInfo
{
    char device_version[16];             //!< The device version
    char spec_version[16];               //!< GigE vision spec version
    char manufacturer_name[32];          //!< The manufactures name
    char model_name[32];                 //!< The model name
    char serial_number[16];              //!< The serial number
    char manufacturer_specific[48];      //!< Some manufacture info
    char user_name[16];                  //!< Device specific
};
/**
 * The network information
 *
 */
struct networkInfo
{
    char ip[16];        //!< The IP (v4) address as string
    char mask[16];      //!< The IP mask as string
    char broadcast[16]; //!< The IP broadcast as string
    char mac[18];       //!< The MAC address as string    
};
/**
* The original discovery reply
*
*/
struct discoveryReply
{
	struct deviceInfo deviceInfo; //!< The device information
	struct networkInfo lanInfo;   //!< The LAN network setup
	struct networkInfo wlanInfo;  //!< The WLAN network setup

	char gvcp_ip[16];             //!< Which IP address is used for image transfer
};
/**
* Structure for holding the adapter
* part of a configuration
*
*
*/
struct networkAdapterConfiguration
{
	int enabled;        //!< Enabled flag, this is not changeable for LAN by API, but changeable for WLAN
	int hw_accel;       //!< Used image transfer, this is not changeable by API
	int bridged;        //!< Is the device in a bridge, this is not changeable by API

	char ifname[16];    //!< Interface name (eth0), this is not changeable by API
	char ipaddr[16];    //!< IP address
	char netmask[16];   //!< Netmask
	char proto[16];     //!< "static" or "dhcp", only these two options are available
	char dns[16];       //!< DNS server
	char gateway[16];   //!< Gateway
	char macaddr[18];   //!< MAC address, this is not changeable by API

	char not_used[110]; //!< To fill up the struct to 320 byte
};
/**
* Wifi configurations, extended version
*/
struct wifiConfigurationEx
{
	char mode[32];      //!< Accesspoint or client
	char agmode[32];    //!< agmode
	int channel;        //!< Channel, only valid options will be accepted, otherwise will return with error

	char ssid[64];          //!< Own SSID if mode == "ap" or the accesspoints ssid
	char description[64];   //!< Contains the description in case of a station

	char passphrase[68];    //!< new Passphrase (station or accesspoint) (may be 64 byte)
	int scan_ssid;          //!< only of station mode: scan the SSID
};
/**
* Structure for holding the complete
* network configuration.
*
*/
struct networkConfiguration
{
	char path[128];         //!< The configurations path, this is not changeable by API
	char name[80];          //!< The configuration name
	char hostname[80];      //!< The hostname
	int readonly;           //!< Is the configuration readonly, this is not changeable by API
	int sshd_enabled;       //!< SSH daemon enabled

	int gbif_enabled;       //!< Is the GBif enabled

	struct networkAdapterConfiguration lan;     //!< LAN
	struct networkAdapterConfiguration wlan;    //!< WLAN

	struct wifiConfigurationEx wifi; //!< Wifi configuration, extended version

	char notUsed[184];               //!< For later extensions
};
HIS_RETURN Acquisition_SetCallbacksAndMessages(HACQDESC pAcqDesc,
					  HWND hWnd,
					  UINT dwErrorMsg, UINT dwLoosingFramesMsg,
					  void (CALLBACK *lpfnEndFrameCallback)(HACQDESC), 
					  void (CALLBACK *lpfnEndAcqCallback)(HACQDESC)
					  );
HIS_RETURN Acquisition_GbIF_CheckNetworkSpeed(	HACQDESC hAcqDesc, WORD* wTiming, long* lPacketDelay, long lMaxNetworkLoadPercent);
HIS_RETURN Acquisition_GbIF_GetDetectorProperties(HACQDESC hAcqDesc, GBIF_Detector_Properties* pDetectorProperties);
HIS_RETURN Acquisition_GbIF_GetDeviceParams(HACQDESC hAcqDesc, GBIF_DEVICE_PARAM* pDevice);
HIS_RETURN Acquisition_GbIF_GetVersion(int *pMajor, int* pMinor, int *pRelease, char *pStrVersion, int iStrLength);
HIS_RETURN Acquisition_GbIF_DiscoverDetectors();
HIS_RETURN Acquisition_GbIF_DiscoveredDetectorCount(long *pDeviceCount);
HIS_RETURN Acquisition_GbIF_DiscoveredDetectorByIndex(long lIndex, GBIF_DEVICE_PARAM *pDevice);
HIS_RETURN Acquisition_GbIF_SetDiscoveryTimeout(long timeout);
HIS_RETURN Acquisition_wpe_GetVersionNEW(int * major, int * minor, int * release, int * build);
HIS_RETURN Acq_WPE_Init();
HIS_RETURN Acquisition_wpe_ForceIP(const char* macAddress, struct networkConfiguration* config, int port, int *isAnswered);
HIS_RETURN Acquisition_wpe_ChangeNetworkConfig(const char * ipAddress, int configIndex, struct networkConfiguration *config);
HIS_RETURN Acquisition_wpe_FillDefaultNetworkConfiguration(struct networkConfiguration *config);
// FTP specific
HIS_RETURN Acquisition_FTP_InitSession(HACQDESC hAcqDesc, XislFtpSession *session);
HIS_RETURN Acquisition_FTP_CloseSession(XislFtpSession session);
HIS_RETURN Acquisition_GetMissedImageCount(XislFtpSession session, UINT *count);
HIS_RETURN Acquisition_OpenMissedImage(XislFtpSession session, UINT index, XislFileHandle *fileHandle);
// Common (multi-purpose) file handling
HIS_RETURN Acquisition_GetFileInfo(XislFileHandle fileHandle, XislFileInfo *fileInfo);
HIS_RETURN Acquisition_LoadFile(XislFileHandle fileHandle, unsigned char **buffer);
HIS_RETURN Acquisition_DeleteFile(XislFileHandle fileHandle);
HIS_RETURN Acquisition_CloseFile(XislFileHandle fileHandle);
HIS_RETURN Acq_wpe_LoadCorrectionImageToBuffer(HACQDESC hAcqDesc, const char* pccCorrectionFilePath, ProcScriptOperation Operation);
HIS_RETURN Acquisition_AcknowledgeImage(HACQDESC hAcqDesc, const char *tag);
HIS_RETURN Acquisition_wpe_SetUniqueImageTag(HACQDESC hAcqDesc, const char * imageTag);
HIS_RETURN Acquisition_Reset_OnboardOptions(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_Set_OnboardOptionsPostOffset(HACQDESC hAcqDesc, BOOL bNoOnboardCorr, BOOL bSendPreviewFrist, BOOL bSendFULLFirst, BOOL bEnableAckFirst, BOOL bEnableAckSecond, BOOL bEnableOffsetFirst, BOOL bEnablePostOffsetCorr, BOOL bGain, BOOL bPixel);
HIS_RETURN Acquisition_Set_OnboardOptionsPostOffsetEx(HACQDESC hAcqDesc, BOOL bNoOnboardCorr, BOOL bSendPreviewFrist, BOOL bSendFULLFirst, BOOL bEnableAckFirst, BOOL bEnableAckSecond, BOOL bEnableOffsetFirst, BOOL bEnablePostOffsetCorr, BOOL bGain, BOOL bPixel, BOOL bStoreOffsetToSD);
HIS_RETURN Acquisition_wpe_SetMaxOnboardCorrValue(HACQDESC hAcqDesc, unsigned short usMax, unsigned short usReplace);
HIS_RETURN Acquisition_Set_OnboardOffsetImageAcquisition(HACQDESC hAcqDesc, BOOL bEnable, BOOL bSend, BOOL bStoreSD);
HIS_RETURN Acquisition_Set_OnboardOptions(HACQDESC hAcqDesc, BOOL bStoreSD, BOOL bOffset, BOOL bGain, BOOL bPixel);
HIS_RETURN Acquisition_ActivateServiceMode(HACQDESC hAcqDesc, BOOL bActivate);
HIS_RETURN Acquisition_SetCameraROI(HACQDESC hAcqDesc, unsigned short usActivateGrp); // val 2010-05-12
HIS_RETURN Acquisition_GetCameraROI(HACQDESC hAcqDesc, unsigned short *usActivateGrp); // val 2010-05-17
HIS_RETURN Acquisition_SetTriggerOutSignalOptions(HACQDESC hAcqDesc,unsigned short usTiggerOutSignalMode,
																	unsigned short usEP_SeqLength, 
																	unsigned short usEP_FirstBrightFrm,
																	unsigned short usEP_LastBrightFrm,
																	unsigned short usEP_Delay1,
																	unsigned short usEP_Delay2,
																	unsigned short usDDD_Delay,
																	int iTriggerOnRisingEdgeEnable,
																	int iSaveAsDefault
																	); // val 2010-05-12
// mk 2013-04-19:
HIS_RETURN Acquisition_wpe_GetVersion(int * major, int * minor, int * release, int * build);
HIS_RETURN Acquisition_wpe_getAvailableSystems(struct discoveryReply * reply, int * numDevices, int timeout,int port);
HIS_RETURN Acquisition_wpe_GetNetworkConfigs(const char * ipAddress, struct networkConfiguration * configs, int * arrayLength, int * activeConfig);
HIS_RETURN Acquisition_wpe_ActivateNetworkConfig(const char * ipAddress, int configIndex);
HIS_RETURN Acquisition_wpe_GetErrorCode(void);
HIS_RETURN Acquisition_wpe_GetErrorCodeEx(char *pBuffer, long len);
// mk 2013-04-19 end
HIS_RETURN Acquisition_GetTriggerOutStatus(HACQDESC hAcqDesc, int* iTriggerStatus); /// 2013-04-22 Val GetTriggerStatus GbIF 
HIS_RETURN Acquisition_SetCameraFOVMode(HACQDESC hAcqDesc, WORD wMode); // 2013-07-03 val R&F Field Of View 
HIS_RETURN Acquisition_GetCameraFOVMode(HACQDESC hAcqDesc, WORD* wMode); // 2013-07-03 val R&F Field Of View 
HIS_RETURN Acquisition_wpe_ReadCameraRegisters(const char * ipAddress, unsigned long * buffer);
HIS_RETURN Acquisition_wpe_GetExamFlag(const char * ipAddress, unsigned long *pExamFlag);
HIS_RETURN Acq_wpe_SystemControl(const char * ipAddress, XRpad_SystemControlEnum eAction);
HIS_RETURN Acq_wpe_SetImageTransferInterface(const char *ipAddress, XRpad_DataInterfaceControlEnum eInterface);
HIS_RETURN Acq_wpe_GetSystemInformation(const char * ipAddress, char *buffer, int bufferLen);
HIS_RETURN Acquisition_GetFTPFile(const char * ipAddress, const char * filename, void ** databuffer, long * filesize); //2013-07-17 mk
HIS_RETURN Acquisition_FreeFTPFileBuffer(void * databuffer); //2013-09-19 mv
HIS_RETURN Acquisition_SetFTPFile(const char * ipAddress, const char * filename, void * databuffer, long filesize); //2013-07-17 mk
HIS_RETURN Acquisition_VerifyGenuineness(HACQDESC hAcqDesc, char (*msg)[128], size_t *msg_len, unsigned char (*md)[20]);
HIS_RETURN Acquisition_SetPrivateKey(HACQDESC hAcqDesc, unsigned char (*key_old)[64], unsigned char (*key_new)[64]);