xraylib/Acq.cs


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_CheckNetworkSpeed(IntPtr hAcqDesc, ushort* wTiming, long* lPacketDelay, long lMaxNetworkLoadPercent);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetDetectorProperties(IntPtr hAcqDesc, GBIF_Detector_Properties* pDetectorProperties);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetDeviceParams(IntPtr hAcqDesc, GBIF_DEVICE_PARAM* pDevice);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_GetVersion(int* pMajor, int* pMinor, int* pRelease, char* pStrVersion, int iStrLength);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_DiscoverDetectors();

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_DiscoveredDetectorCount(long* pDeviceCount);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_DiscoveredDetectorByIndex(long lIndex, GBIF_DEVICE_PARAM* pDevice);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GbIF_SetDiscoveryTimeout(long timeout);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_GetVersionNEW(int* major, int* minor, int* release, int* build);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acq_WPE_Init();


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_ForceIP(const char* macAddress, struct networkConfiguration* config, int port, int* isAnswered);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_ChangeNetworkConfig(const char* ipAddress, int configIndex, struct networkConfiguration * config);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_FillDefaultNetworkConfiguration(struct networkConfiguration * config);

        //// FTP specific

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_FTP_InitSession(IntPtr hAcqDesc, XislFtpSession* session);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_FTP_CloseSession(XislFtpSession session);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetMissedImageCount(XislFtpSession session, uint* count);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_OpenMissedImage(XislFtpSession session, uint index, XislFileHandle* fileHandle);

        //        // Common (multi-purpose) file handling

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetFileInfo(XislFileHandle fileHandle, XislFileInfo* fileInfo);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_LoadFile(XislFileHandle fileHandle, byte** buffer);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_DeleteFile(XislFileHandle fileHandle);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_CloseFile(XislFileHandle fileHandle);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acq_wpe_LoadCorrectionImageToBuffer(IntPtr hAcqDesc, const char* pccCorrectionFilePath, ProcScriptOperation Operation);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_AcknowledgeImage(IntPtr hAcqDesc, const char* tag);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_SetUniqueImageTag(IntPtr hAcqDesc, const char* imageTag);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Reset_OnboardOptions(IntPtr hAcqDesc);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Set_OnboardOptionsPostOffset(IntPtr hAcqDesc, bool bNoOnboardCorr, bool bSendPreviewFrist, bool bSendFULLFirst, bool bEnableAckFirst, bool bEnableAckSecond, bool bEnableOffsetFirst, bool bEnablePostOffsetCorr, bool bGain, bool bPixel);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Set_OnboardOptionsPostOffsetEx(IntPtr hAcqDesc, bool bNoOnboardCorr, bool bSendPreviewFrist, bool bSendFULLFirst, bool bEnableAckFirst, bool bEnableAckSecond, bool bEnableOffsetFirst, bool bEnablePostOffsetCorr, bool bGain, bool bPixel, bool bStoreOffsetToSD);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_SetMaxOnboardCorrValue(IntPtr hAcqDesc, unsigned short usMax, unsigned short usReplace);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Set_OnboardOffsetImageAcquisition(IntPtr hAcqDesc, bool bEnable, bool bSend, bool bStoreSD);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Set_OnboardOptions(IntPtr hAcqDesc, bool bStoreSD, bool bOffset, bool bGain, bool bPixel);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_ActivateServiceMode(IntPtr hAcqDesc, bool bActivate);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetCameraROI(IntPtr hAcqDesc, unsigned short usActivateGrp); // val 2010-05-12

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetCameraROI(IntPtr hAcqDesc, unsigned short* usActivateGrp); // val 2010-05-17


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetTriggerOutSignalOptions(IntPtr hAcqDesc, unsigned short usTiggerOutSignalMode,
        //                                                                            unsigned short usEP_SeqLength,
        //                                                                            unsigned short usEP_FirstBrightFrm,
        //                                                                            unsigned short usEP_LastBrightFrm,
        //                                                                            unsigned short usEP_Delay1,
        //                                                                            unsigned short usEP_Delay2,
        //                                                                            unsigned short usDDD_Delay,
        //                                                                            int iTriggerOnRisingEdgeEnable,
        //                                                                            int iSaveAsDefault
        //                                                                            ); // val 2010-05-12

        //        // mk 2013-04-19:

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_GetVersion(int* major, int* minor, int* release, int* build);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_getAvailableSystems(struct discoveryReply * reply, int* numDevices, int timeout,int port);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_GetNetworkConfigs(const char* ipAddress, struct networkConfiguration * configs, int* arrayLength, int* activeConfig);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_ActivateNetworkConfig(const char* ipAddress, int configIndex);


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_GetErrorCode(void);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_wpe_GetErrorCodeEx(char* pBuffer, long len);

        //        // mk 2013-04-19 end

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetTriggerOutStatus(IntPtr hAcqDesc, int* iTriggerStatus); /// 2013-04-22 Val GetTriggerStatus GbIF 


        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_SetCameraFOVMode(IntPtr hAcqDesc,  XRD4343_FOV wMode); // 2013-07-03 val R&F Field Of View 

        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        public static extern HIS_RETURN Acquisition_GetCameraFOVMode(IntPtr hAcqDesc, ref XRD4343_FOV wMode); // 2013-07-03 val R&F Field Of View 

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //public static extern HIS_RETURN Acquisition_wpe_ReadCameraRegisters(const char* ipAddress, unsigned long* buffer);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //public static extern HIS_RETURN Acquisition_wpe_GetExamFlag(const char* ipAddress, unsigned long* pExamFlag);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acq_wpe_SystemControl(const char* ipAddress, XRpad_SystemControlEnum eAction);
        //[DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acq_wpe_SetImageTransferInterface(const char* ipAddress, XRpad_DataInterfaceControlEnum eInterface);
        //[DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acq_wpe_GetSystemInformation(const char* ipAddress, char* buffer, int bufferLen);

        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetFTPFile(const char* ipAddress, const char* filename, void** databuffer, long* filesize); //2013-07-17 mk
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_FreeFTPFileBuffer(void* databuffer); //2013-09-19 mv
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetFTPFile(const char* ipAddress, const char* filename, void* databuffer, long filesize); //2013-07-17 mk
